# BCI-Research-Project

./: BCI.cpp  BCI.h  CMakeLists.txt  EEG.txt  README.md  main.cpp
